---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: ???
  Features:
    - Added support for modded poles from Bio Industries (more can be added upon request)
  Changes:
    - "Very big electric pole" renamed to "Huge electric pole"
    - Lots of internal name changes
    - Transformers no longer show up in both "Consumption" and "Production" sides of electric network statistics
  Bugfixes:
    - Fixed mining a transformer returns a power switch to the player's inventory
    - Fixed mining a "Huge electric pole" returns a "Big electric pole" to the player's inventory
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 8 February 2020
  Bugfixes:
    - Fixed crash on load
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 8 February 2020
  Features:
    - Added setting to customise power poles' maximum consumptions
    - Added support for modded poles from AAI Industry, Bob's Power, and Cargo Ships (more can be added upon request)
    - Added option to have overloading a power pole damage it instead of instantly destroying it 
  Changes:
    - Reverted electric pole names back to their vanilla names
    - Increased crafting time for "Very big electric pole" from 0.5 to 1.5 seconds
  Bugfixes:
    - Fixed crash when adding this mod to a save that it has been previously loaded with
    - Fixed "Big" and "Very big" power poles never exploding
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 4 February 2020
  Features:
    - Initial release
    - Tier 4 power poles with very long range and high maximum power but no supply area
    - Transformers which can separate electrical networks
    - All power poles have a maximum consumption, above which they may explode